--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ button {
     width: 680px;
     height: 680px;
     margin: 0 auto;
+    display: grid;
+    grid-gap: 10px;
 }
 
 .memory-cards {
@@ -50,8 +52,11 @@ button {
 
 .back-face {
     background-color: black;
+    height: 100%;
+    width: 100%;
 }
 
 .front-face {
-
+    height: 100%;
+    width: 100%;
 }
