--- a/style.css
+++ b/style.css
@@ -2,23 +2,25 @@ html,
 body {
     height: 100vh;
     width: 100vw;
+    margin: 0 auto;
 
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 header {
-    width: 100vw;
-    position: fixed;
-    top: 0;
-    text-align: center;
+    height: 100vh;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 button {
     height: 30px;
-    width: 90px;
+    width: 150px;
     border-radius: 30px;
     margin: 20px;
 }
@@ -28,7 +30,6 @@ button {
     height: 700px;
     padding: 10px;
     display: flex;
-    justify-content: center;
     align-items: center;
     border-radius: 30px;
     background-color: gray;
@@ -44,19 +45,27 @@ button {
     margin: 0 auto;
     display: grid;
     grid-gap: 10px;
+    align-items: center;
+    justify-items: center;
 }
 
 .memory-cards {
-    border-radius: 25px;
+    height: 100%;
+    width: 100%;
 }
 
 .back-face {
     background-color: black;
     height: 100%;
     width: 100%;
+    border-radius: 25px;
+    color: white;
+    text-align: center;
+    /* backface-visibility: hidden; */
 }
 
 .front-face {
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
+    border-radius: 25px;
 }
