--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ button {
     width: 150px;
     border-radius: 30px;
     margin: 20px;
+
+    cursor: pointer;
 }
 
 .container {
@@ -52,20 +54,49 @@ button {
 .memory-cards {
     height: 100%;
     width: 100%;
+    cursor: pointer;
+}
+
+.front-face,
+.back-face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
 }
 
 .back-face {
     background-color: black;
-    height: 100%;
-    width: 100%;
     border-radius: 25px;
     color: white;
     text-align: center;
-    /* backface-visibility: hidden; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .front-face {
-    /* height: 100%;
-    width: 100%; */
     border-radius: 25px;
+    background-color: blue;
+    transform: rotateY(180deg);
+}
+
+.flip-card {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+}
+
+/* flipped class from js */
+.flip-card.flipped {
+    /* need this to actually flip */
+    transform: rotateY(180deg);
+}
+
+.memory-cards:active {
+    /* shrink then expand affect */
+    transform: scale(0.90);
+    transition: transform .2s;
 }
