--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: -4px 4px;
 }
 
 .front-face {
@@ -80,6 +81,7 @@ button {
     border-radius: 25px;
     background-color: blue;
     transform: rotateY(180deg);
+    box-shadow: 4px 4px;
 }
 
 .flip-card {
