--- a/style.css
+++ b/style.css
@@ -8,23 +8,58 @@ body {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+
+    font-family: 'Poppins', sans-serif;
+
 }
 
 header {
     height: 100vh;
-    width: 150px;
+    width: 450px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.intro {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+h1 {
+    margin: 0 auto;
+    padding: 20px;
+    font-size: 70px;
+    border-right: black 1.5px solid;
+}
+
+p {
+    margin-left: 10px;
+    padding: 5px;
+    
+    font-weight: 200;
+}
+
+.mode {
+    display: flex;
+    flex-direction: column;
+    margin: 10px 0 35px 0;
 }
 
 button {
     height: 30px;
-    width: 150px;
+    width: 200px;
     border-radius: 30px;
-    margin: 20px;
+    margin: 10px;
 
     cursor: pointer;
+}
+
+.stats {
+    text-align: center;
+    font-weight: 500;
 }
 
 .container {
@@ -102,4 +137,8 @@ button {
     /* shrink then expand affect */
     transform: scale(0.90);
     transition: transform .2s;
+}
+
+.congratulations {
+    text-align: center;
 }
