--- a/style.css
+++ b/style.css
@@ -32,14 +32,14 @@ h1 {
     margin: 0 auto;
     padding: 20px;
     font-size: 70px;
-    border-right: black 1.5px solid;
 }
 
 p {
-    margin-left: 10px;
-    padding: 5px;
+    margin-left: 0 auto;
+    padding: 5px 0 5px 10px;
     
     font-weight: 200;
+    border-left: black 1.5px solid;
 }
 
 .mode {
